cabal-version: 2.0
name: tool
synopsis: Tool for generating head.hackage-style repos
version: 0
maintainer: hvr@gnu.org
build-type: Simple
license: GPL-3
license-file: LICENSE
tested-with: GHC==8.2.1, GHC==8.0.2, GHC==7.10.3

executable tool
  default-language: Haskell2010
  hs-source-dirs: src/
  main-is: Main.hs

  build-depends: base            >= 4.8.2.0 && < 4.13
               , shelly          ^>= 1.7
               , text            ^>= 1.2
               , system-filepath ^>= 0.4
               , containers      >= 0.5 && < 0.7
               , optparse-applicative ^>= 0.15

  if !impl(ghc >= 8)
    build-depends: semigroups    ^>= 0.18.3
